--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.18.0",
+    "react-select": "^5.8.0",
     "rsuite": "^5.44.0",
     "sweetalert2": "^11.10.1"
   },
