--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^16.3.1",
     "jquery": "^3.7.1",
     "jszip": "^3.10.1",
+    "moment": "^2.30.1",
     "pdfmake": "^0.2.8",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
@@ -26,6 +27,7 @@
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.18.0",
     "react-select": "^5.8.0",
+    "react-zxing": "^2.0.0",
     "rsuite": "^5.44.0",
     "sweetalert2": "^11.10.1"
   },
