--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@rsuite/icons": "^1.0.3",
     "bootstrap": "^5.3.2",
     "crypto-js": "^4.2.0",
     "datatables.net-bs5": "^1.13.7",
