--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.5.1",
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@rsuite/icons": "^1.0.3",
     "bootstrap": "^5.3.2",
     "crypto-js": "^4.2.0",
@@ -18,6 +21,7 @@
     "datatables.net-datetime": "^1.5.0",
     "datatables.net-responsive-bs5": "^2.5.0",
     "dotenv": "^16.3.1",
+    "google-map-react": "^2.2.1",
     "jquery": "^3.7.1",
     "jszip": "^3.10.1",
     "moment": "^2.30.1",
